--- a/style.css
+++ b/style.css
@@ -5,3 +5,68 @@
   height: 100vh;
   font-family: Poppins;
 }
+
+
+/* Navbar code written below -->*/
+
+nav{
+  display: flex;
+  align-items: space-between;
+  justify-content: space-between;
+  width: 100%;
+  height: 75px;
+  background-color: #545456;
+  line-height: 75px;
+  padding: 0px 100px;
+  position: fixed;
+  z-index: 1;
+}
+nav .logo{
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+}
+nav .logo {
+  color: #fff;
+  text-transform: uppercase;
+  font-family: 'Rubik Beastly', cursive;
+font-family: 'Sedgwick Ave', cursive;
+}
+
+nav img {
+  height: 75px;
+}
+
+nav img:hover {
+  width: 140px;
+}
+
+nav ul li{
+  display: inline-block;
+  list-style: none;
+}
+nav ul li a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  text-transform: uppercase;
+  padding: 0px 32px;
+}
+nav ul li a:hover{
+  color: #004568
+}
+nav ul li .active{
+  color: #c0d96f;
+}
+
+
+/* Responsive with tablet -->*/
+@media screen and (max-width: 1200px) {
+  /* Navbar responsive code -->*/
+}
+
+/* Responsive with phone -->*/
+@media screen and (max-width: 600px) {
+    /* Navbar responsive code -->*/
+  
+}
