--- a/style.css
+++ b/style.css
@@ -2,6 +2,25 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  height: 100vh;
   font-family: Poppins;
+}
+.hero {
+  background-image: url(./background-image/background.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  color: white;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.title {
+  font-size: 50px;
+  padding-bottom: 50px;
+}
+.discription {
+  font-size: 25px;
 }
