--- a/style.css
+++ b/style.css
@@ -24,3 +24,13 @@
 .discription {
   font-size: 25px;
 }
+
+@media (max-width: 600px) {
+  .title {
+    font-size: 25px;
+    padding-bottom: 30px;
+  }
+  .discription {
+    font-size: 15px;
+  }
+}
