--- a/style.css
+++ b/style.css
@@ -6,10 +6,9 @@
   font-family: Poppins;
 }
 
-
 /* Navbar code written below -->*/
 
-nav{
+nav {
   display: flex;
   align-items: space-between;
   justify-content: space-between;
@@ -21,7 +20,7 @@ nav{
   position: fixed;
   z-index: 1;
 }
-nav .logo{
+nav .logo {
   font-size: 30px;
   font-weight: bold;
   letter-spacing: 1.5px;
@@ -29,8 +28,8 @@ nav .logo{
 nav .logo {
   color: #fff;
   text-transform: uppercase;
-  font-family: 'Rubik Beastly', cursive;
-font-family: 'Sedgwick Ave', cursive;
+  font-family: "Rubik Beastly", cursive;
+  font-family: "Sedgwick Ave", cursive;
 }
 
 nav img {
@@ -41,24 +40,23 @@ nav img:hover {
   width: 140px;
 }
 
-nav ul li{
+nav ul li {
   display: inline-block;
   list-style: none;
 }
-nav ul li a{
+nav ul li a {
   color: #fff;
   text-decoration: none;
   font-size: 18px;
   text-transform: uppercase;
   padding: 0px 32px;
 }
-nav ul li a:hover{
-  color: #004568
+nav ul li a:hover {
+  color: #004568;
 }
-nav ul li .active{
+nav ul li .active {
   color: #c0d96f;
 }
-
 
 /* Responsive with tablet -->*/
 @media screen and (max-width: 1200px) {
@@ -67,6 +65,5 @@ nav ul li .active{
 
 /* Responsive with phone -->*/
 @media screen and (max-width: 600px) {
-    /* Navbar responsive code -->*/
-  
+  /* Navbar responsive code -->*/
 }
