Make form responsive form responsive with all screens Relates #11

--- a/style.css
+++ b/style.css
@@ -84,3 +84,9 @@ input:focus textarea:focus {
 .form textarea {
     display: block;
 }
+
+@media (max-width: 600px) {
+    .form {
+        width: 90%;
+    }
+}
