add about section and style it relates #10

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: Poppins;
 }
+/* welcome section */
 .hero {
   background-image: url(./background-image/background.jpg);
   background-size: cover;
@@ -33,4 +34,29 @@
   .discription {
     font-size: 15px;
   }
+}
+
+.about-us {
+  max-width: 500px;
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin: 100px auto;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 25px;
+  gap: 10px;
+}
+hr {
+  border-top: 1px solid rgba(0, 0, 0, 0.452);
+  width: 100%;
+}
+.about-title {
+  font-size: 20px;
+}
+.about-discription {
+  font-size: 15px;
 }
