--- a/style.css
+++ b/style.css
@@ -20,9 +20,8 @@ input:focus textarea:focus {
 
 .form-section {
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    height: 600px;
+    justify-content: center;
+    height: 100vh;
 }
 
 .form-title {
@@ -45,9 +44,9 @@ input:focus textarea:focus {
 }
 
 .form-input {
-    width: 70%;
+    width: 80%;
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding: 10px;
 }
 
@@ -87,6 +86,9 @@ input:focus textarea:focus {
 
 @media (max-width: 600px) {
     .form {
+        width: 100%;
+    }
+    .form-container {
         width: 90%;
     }
 }
