--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  height: 100vh;
+  
   font-family: Poppins;
 }
 
@@ -24,25 +24,23 @@ nav .logo {
   font-size: 30px;
   font-weight: bold;
   letter-spacing: 1.5px;
-}
-nav .logo {
-  color: #fff;
-  text-transform: uppercase;
-  font-family: "Rubik Beastly", cursive;
-  font-family: "Sedgwick Ave", cursive;
+  animation: cardFromRight 1s ease-in-out;
 }
 
 nav img {
   height: 75px;
+  transition: all 0.6s ease-in;
 }
 
 nav img:hover {
-  width: 140px;
+  transform: scale(1.1);
 }
+
 
 nav ul li {
   display: inline-block;
   list-style: none;
+  animation: cardFromLeft 1s ease-in-out;
 }
 nav ul li a {
   color: #fff;
@@ -50,6 +48,7 @@ nav ul li a {
   font-size: 18px;
   text-transform: uppercase;
   padding: 0px 32px;
+  
 }
 nav ul li a:hover {
   color: #004568;
@@ -58,12 +57,98 @@ nav ul li .active {
   color: #c0d96f;
 }
 
+label #btn {
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+
+#check{
+  display: none;
+}
+
+@keyframes cardFromLeft {
+  0%{
+      opacity: 0;
+      transform: translateX(-100vw) scale(0); 
+  }
+}
+@keyframes cardFromRight {
+  0%{
+    opacity: 0;
+    transform: translateX(100vw) scale(0); 
+}
+}
+
+
+
+
+
 /* Responsive with tablet -->*/
 @media screen and (max-width: 1200px) {
   /* Navbar responsive code -->*/
+  nav {
+    display: flex;
+    
+    width: 100%;
+    height: 75px;
+    background-color: #545456;
+    line-height: 75px;
+    padding: 0px 100px;
+    position: fixed;
+    z-index: 1;
+  }
+
+  nav ul li {
+    position: block;
+    height: 300px;
+  }
+
+  nav ul li a {
+   
+    font-size: 15px;
+  }
+  nav ul li a:hover,nav ul li .active {
+    color: #004568;
+  }
 }
 
 /* Responsive with phone -->*/
 @media screen and (max-width: 600px) {
   /* Navbar responsive code -->*/
+  nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 1px;
+  }
+  nav ul{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #545456;
+    top: 75px;
+    left: -100%;
+    text-align: center;
+    justify-content: center;
+    transition: all .5s;
+  }
+  nav ul li{
+    display: block;
+    margin: 50px 0;
+  }
+
+  label #btn{
+    display: inline-block;
+  }
+
+  label :hover,label  .active {
+    color: #004568;
+  }
+  #check:checked ~ ul{
+    left: 0;
+  }
 }
