--- a/style.css
+++ b/style.css
@@ -2,6 +2,98 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  height: 100vh;
   font-family: Poppins;
 }
+
+.footer {
+  padding: 40px 0;
+  display: flex;
+  justify-content: space-around;
+  background-color: #545456;
+}
+
+
+.footer .social {
+  text-align: center;
+  color: aliceblue;
+  animation: cardFromLeft 1s ease-in-out;
+}
+
+.footer .list {
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  animation: cardFromRight 1s ease-in-out;
+}
+
+.footer .social a{
+  font-size: 24px;
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(255, 255, 255);
+  width: 40px;
+  height: 40px;
+  line-height: 38px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 8px;
+  opacity: 0.75;
+}
+
+.footer .social a:hover {
+  opacity: 0.9;
+  color: #004568;
+  border: 1px solid #004568;
+}
+
+.footer ul {
+  margin-top: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.footer ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer ul li {
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.footer ul li a:hover {
+  opacity: 1;
+  color: #004568;
+}
+
+.footer .copyright{
+  font-size: 15px;
+  color: rgb(255, 255, 255);
+  align-items: center;
+  
+}
+
+@keyframes cardFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100vw) scale(0);
+  }
+}
+@keyframes cardFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100vw) scale(0);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer  {
+  display: block;
+}
+}
+
