--- a/style.css
+++ b/style.css
@@ -5,101 +5,7 @@
   font-family: Poppins;
 }
 
-.footer {
-  padding: 40px 0;
-  display: flex;
-  justify-content: space-around;
-  background-color: #545456;
-}
-
-.footer .social {
-  text-align: center;
-  color: aliceblue;
-  animation: cardFromLeft 1s ease-in-out;
-}
-
-.footer .list {
-  font-size: 20px;
-  color: rgb(255, 255, 255);
-  animation: cardFromRight 1s ease-in-out;
-}
-
-.footer .social a {
-  font-size: 24px;
-  color: rgb(255, 255, 255);
-  border: 1px solid rgb(255, 255, 255);
-  width: 40px;
-  height: 40px;
-  line-height: 38px;
-  display: inline-block;
-  text-align: center;
-  border-radius: 50%;
-  margin: 0 8px;
-  opacity: 0.75;
-}
-
-.footer .social a:hover {
-  opacity: 0.9;
-  color: #004568;
-  border: 1px solid #004568;
-}
-
-.footer ul {
-  margin-top: 0;
-  padding: 0;
-  list-style: none;
-  font-size: 18px;
-  line-height: 1.6;
-  margin-bottom: 0;
-  text-align: center;
-}
-
-.footer ul a {
-  color: inherit;
-  text-decoration: none;
-  opacity: 0.8;
-}
-
-.footer ul li {
-  display: inline-block;
-  padding: 0 15px;
-}
-
-.footer ul li a:hover {
-  opacity: 1;
-  color: #004568;
-}
-
-.footer .copyright {
-  font-size: 15px;
-  color: rgb(255, 255, 255);
-  align-items: center;
-}
-
-@keyframes cardFromLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-100vw) scale(0);
-  }
-}
-@keyframes cardFromRight {
-  0% {
-    opacity: 0;
-    transform: translateX(100vw) scale(0);
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .footer {
-    display: block;
-  }
-  .footer .social {
-    margin-top: 30px;
-  }
-}
-
 /* This code for remove borders around input and textarea fields */
-
 input,
 textarea {
   border: 0;
@@ -110,6 +16,92 @@ input:focus textarea:focus {
   outline: none !important;
 }
 
+/* Navbar code written below -->*/
+
+nav {
+  display: flex;
+  align-items: space-between;
+  justify-content: space-between;
+  width: 100%;
+  height: 75px;
+  background-color: #1c335f;
+  line-height: 75px;
+  padding: 0px 100px;
+  position: relative;
+  z-index: 1;
+}
+
+nav .logo {
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+  animation: cardFromRight 1s ease-in-out;
+}
+
+nav img {
+  height: 50px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.6s ease-in;
+}
+
+nav ul li {
+  display: inline-block;
+  list-style: none;
+  animation: cardFromLeft 1s ease-in-out;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  text-transform: uppercase;
+  padding: 5px 32px;
+  transition: all 0.3s ease-in-out;
+}
+
+nav ul li a:hover {
+  background-color: white;
+  color: #1c335f;
+  border-radius: 10px;
+}
+
+nav ul li .active {
+  color: #c0d96f;
+}
+
+label #btn {
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+
+#check {
+  display: none;
+}
+
+@keyframes cardFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100vw) scale(0);
+  }
+}
+
+@keyframes cardFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100vw) scale(0);
+  }
+}
+
+/* Responsive with tablet -->*/
+
+/* form section  */
 .form-section {
   display: flex;
   justify-content: center;
@@ -128,6 +120,7 @@ input:focus textarea:focus {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 5px;
 }
 
 .form-label {
@@ -159,7 +152,7 @@ input:focus textarea:focus {
   bottom: 20px;
   right: 65px;
   border: none;
-  background-color: #004568;
+  background-color: #1c335f;
   color: #ffffff;
   font-size: 20px;
   transition: all ease-in-out 0.3s;
@@ -184,19 +177,51 @@ input:focus textarea:focus {
     width: 90%;
   }
 }
+/* welcom section */
 
-/* welcome section */
+.hero {
+  background-image: url(./assests/background.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  color: white;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title {
+  font-size: 50px;
+  padding-bottom: 50px;
+}
+
+.discription {
+  font-size: 25px;
+}
 
 /* Our team section  */
 
 .our-team {
   max-width: 1500px;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .text {
   width: fit-content;
   margin: 50px 90px 0;
+  font-size: 40px;
+  background-color: #1c335f;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .card img {
@@ -243,7 +268,7 @@ input:focus textarea:focus {
 .icons ul {
   display: flex;
   width: 150px;
-  background-color: #004568;
+  background-color: #1c335f;
   padding: 10px;
   margin: -5px auto;
   border-radius: 5px;
@@ -266,6 +291,141 @@ input:focus textarea:focus {
   color: white;
 }
 
+.card,
+.card * {
+  transition-duration: 1s;
+}
+.card:hover {
+  transform: scale(1.1);
+  transform-origin: bottom bottom;
+}
+.card:hover * {
+  transform: scale(1);
+}
+
+/* End The Our Team Section */
+
+/* about as section */
+
+.about-us {
+  max-width: 700px;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 5px;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  margin: 100px auto;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 25px;
+  gap: 10px;
+}
+
+hr {
+  border-top: 1px solid rgba(0, 0, 0, 0.452);
+  width: 100%;
+}
+
+.about-title {
+  font-size: 40px;
+}
+
+.about-discription {
+  font-size: 15px;
+}
+
+/* footer section */
+.footer {
+  padding: 40px 0;
+  display: flex;
+  justify-content: space-around;
+  background-color: #1c335f;
+}
+
+.footer .social {
+  text-align: center;
+  color: aliceblue;
+  animation: cardFromLeft 1s ease-in-out;
+}
+
+.footer .list {
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  animation: cardFromRight 1s ease-in-out;
+}
+
+.footer .social a {
+  font-size: 24px;
+  color: rgb(255, 255, 255);
+  width: 40px;
+  height: 40px;
+  line-height: 38px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 8px;
+  opacity: 0.75;
+  transition: all 0.3s ease-in-out;
+}
+
+.footer .social a:hover {
+  opacity: 0.9;
+  transform: scale(1.2);
+}
+
+.footer ul {
+  margin-top: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.footer ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+  transition: all 0.3s ease-in-out;
+  padding: 5px;
+}
+
+.footer ul li {
+  display: inline-block;
+  padding: 0 15px;
+  transition: all 0.3s ease-in-out;
+}
+
+.footer ul li a:hover {
+  background-color: white;
+  color: #1c335f;
+  border-radius: 10px;
+}
+
+.footer .copyright {
+  font-size: 15px;
+  color: rgb(255, 255, 255);
+  align-items: center;
+}
+
+@keyframes cardFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100vw) scale(0);
+  }
+}
+@keyframes cardFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100vw) scale(0);
+  }
+}
+
+/* responsive design  */
+
 @media (min-width: 1800px) {
   .ourTeam {
     display: flex;
@@ -281,18 +441,27 @@ input:focus textarea:focus {
   }
 }
 
-@media (max-width: 600px) {
-  .ourTeam {
-    display: block;
-    margin: 10px 35px;
+@media screen and (max-width: 1200px) {
+  /* Navbar responsive code -->*/
+  nav {
+    display: flex;
+    width: 100%;
+    height: 75px;
+    line-height: 75px;
+    padding: 0px 100px;
+    position: fixed;
+    z-index: 1;
   }
-  .ourTeam .card {
-    margin: auto;
-    margin-bottom: 15px;
+  /* This line was edited */
+  nav ul li {
+    height: 50px;
   }
-  .text {
-    text-align: center;
-    width: 150px;
+  nav ul li a {
+    font-size: 15px;
+  }
+  nav ul li a:hover,
+  nav ul li .active {
+    color: #004568;
   }
 }
 
@@ -302,35 +471,42 @@ input:focus textarea:focus {
   }
 }
 
-/* End The Our Team Section */
+/* Responsive with phone -->*/
 
-/* welcom section */
-
-.hero {
-  background-image: url(./assests/background.jpg);
-  background-attachment: fixed;
-  background-size: cover;
-  width: 100%;
-  height: 100vh;
-  color: white;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.title {
-  font-size: 50px;
-  padding-bottom: 50px;
-}
-
-.discription {
-  font-size: 25px;
-}
-
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
+  /* Navbar responsive code -->*/
+  nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 30px;
+  }
+  nav ul {
+    position: fixed;
+    width: 100%;
+    height: 30%;
+    background-color: #1c335f;
+    top: 75px;
+    left: -100%;
+    text-align: center;
+    justify-content: center;
+    transition: all 0.5s;
+    border-radius: 20px;
+  }
+  nav ul li {
+    display: block;
+    margin: 20px 0px;
+  }
+  label #btn {
+    display: inline-block;
+  }
+  label :hover,
+  label .active {
+    color: white;
+  }
+  #check:checked ~ ul {
+    left: 0;
+  }
+  /* welcom  */
   .title {
     font-size: 25px;
     padding-bottom: 30px;
@@ -348,180 +524,25 @@ input:focus textarea:focus {
   .about-us {
     width: 90%;
   }
-}
-
-/* about as section */
-
-.about-us {
-  max-width: 700px;
-  height: 300px;
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  margin: 100px auto;
-  color: black;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 25px;
-  gap: 10px;
-}
-
-hr {
-  border-top: 1px solid rgba(0, 0, 0, 0.452);
-  width: 100%;
-}
-
-.about-title {
-  font-size: 20px;
-}
-
-.about-discription {
-  font-size: 15px;
-}
-
-/* Navbar code written below -->*/
-
-nav {
-  display: flex;
-  align-items: space-between;
-  justify-content: space-between;
-  width: 100%;
-  height: 75px;
-  background-color: #545456;
-  line-height: 75px;
-  padding: 0px 100px;
-  position: fixed;
-  z-index: 1;
-}
-
-nav .logo {
-  font-size: 30px;
-  font-weight: bold;
-  letter-spacing: 1.5px;
-  animation: cardFromRight 1s ease-in-out;
-}
-
-nav img {
-  height: 75px;
-  transition: all 0.6s ease-in;
-}
-
-/* DELETE THIS HOVER */
-
-nav img:hover {
-  transform: scale(1.1);
-}
-
-nav ul li {
-  display: inline-block;
-  list-style: none;
-  animation: cardFromLeft 1s ease-in-out;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  text-transform: uppercase;
-  padding: 0px 32px;
-}
-
-nav ul li a:hover {
-  color: #004568;
-}
-
-nav ul li .active {
-  color: #c0d96f;
-}
-
-label #btn {
-  font-size: 30px;
-  color: white;
-  float: right;
-  line-height: 80px;
-  margin-right: 40px;
-  cursor: pointer;
-  display: none;
-}
-
-#check {
-  display: none;
-}
-
-@keyframes cardFromLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-100vw) scale(0);
-  }
-}
-
-@keyframes cardFromRight {
-  0% {
-    opacity: 0;
-    transform: translateX(100vw) scale(0);
-  }
-}
-
-/* Responsive with tablet -->*/
-
-@media screen and (max-width: 1200px) {
-  /* Navbar responsive code -->*/
-  nav {
-    display: flex;
-    width: 100%;
-    height: 75px;
-    background-color: #545456;
-    line-height: 75px;
-    /* padding: 0px 100px; */
-    position: fixed;
-    z-index: 1;
-  }
-  /* This line was edited */
-  nav ul li {
-    height: 50px;
-  }
-  nav ul li a {
-    font-size: 15px;
-  }
-  nav ul li a:hover,
-  nav ul li .active {
-    color: #004568;
-  }
-}
-
-/* Responsive with phone -->*/
-
-@media screen and (max-width: 600px) {
-  /* Navbar responsive code -->*/
-  nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 1px;
-  }
-  nav ul {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: #545456;
-    top: 75px;
-    left: -100%;
-    text-align: center;
-    justify-content: center;
-    transition: all 0.5s;
-  }
-  nav ul li {
+  /* our team  */
+  .ourTeam {
     display: block;
-    margin: 50px 0;
+    margin: 10px 35px;
   }
-  label #btn {
-    display: inline-block;
+  .ourTeam .card {
+    margin: auto;
+    margin-bottom: 15px;
   }
-  label :hover,
-  label .active {
-    color: #004568;
+  .text {
+    text-align: center;
+    width: 150px;
+    font-size: 20px;
   }
-  #check:checked ~ ul {
-    left: 0;
+  /* footer  */
+  .footer {
+    display: block;
+  }
+  .footer .social {
+    margin-top: 30px;
   }
 }
